# QuadCam

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  client.cc
include/camera/: quadcam.h
include/client/: camera_client.h
include/server/: camera_server.h
include/utils/: types.h  utils.h
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  quadcam.cc  snapcam.cc
src/client/: CMakeLists.txt  camera_client.cc  camera_client.h  frame_data.h
src/common/: frame_data.h
src/exe/: CMakeLists.txt  client.cc  server.cc
src/server/: CMakeLists.txt  camera_server.cc  camera_server.h
src/utils/: CMakeLists.txt  utils.cc
